# apix-agent-platform

./: .gitignore  README.md  README_en.md  setup.ps1  setup.sh  start_all.bat  简历-优化版.md  面试稿-定制版.md  项目整理-三大模块.md
AGENT/: .gitignore
AGENT/agent_module/: .gitignore  main.py  pyproject.toml
AGENT/agent_module/README/: json_struct.md
AGENT/agent_module/README/docker_files/agent_sandbox/: Dockerfile
AGENT/agent_module/apix_agent/: global_config.py
AGENT/agent_module/apix_agent/apix_agent_core/: __init__.py  agent.py  generation_manager.py
AGENT/agent_module/apix_agent/apix_agent_core/LLM/: __init__.py  llm_adapter.py  llm_creator.py  llm_factory.py
AGENT/agent_module/apix_agent/apix_agent_core/agent_factory/: agent_creator.py
AGENT/agent_module/apix_agent/apix_agent_core/agent_factory/agent_node/: __init__.py  agent_node_base.py  main_agent_node.py  sub_agent_node.py
AGENT/agent_module/apix_agent/apix_agent_core/agent_task/: team_task_manager.py
AGENT/agent_module/apix_agent/apix_agent_core/context_manager/: context_process.py  generating_cache.py
AGENT/agent_module/apix_agent/apix_agent_core/sandbox_manager/: agent_sandbox_manager.py  file_system_manager.py  workspace_git_manager.py
AGENT/agent_module/apix_agent/apix_agent_core/tools/: __init__.py  prompt.py  registry.py  tool_node.py
AGENT/agent_module/apix_agent/apix_agent_core/tools/assistant/: call_assistant.py
AGENT/agent_module/apix_agent/apix_event_handler/: event_handler_manager.py
AGENT/agent_module/apix_agent/apix_event_handler/system_handler/: on_team_task.py
AGENT/agent_module/apix_agent/apix_event_pipe/: event_handler_base.py
AGENT/agent_module/apix_agent/apix_event_pipe/common_event/: agent_event_writer.py  common_event_gateway.py  event_registry.py
AGENT/agent_module/apix_agent/apix_event_pipe/stream_event/: agent_stream_writer.py  stream_event_gateway.py
AGENT/agent_module/apix_agent/apix_execution_context/: agent_loop_context.py  execution_context_base.py
AGENT/agent_module/apix_agent/apix_platform/: register.py
AGENT/agent_module/apix_agent/apix_platform/platform/: __init__.py  default_platform.py  platform_base.py  webhook_platform.py  websocket_platform.py
AGENT/agent_module/apix_agent/commons/: auto_init.py  common_func.py  decorator.py  file_content_reader.py  logger.py  resource_cleaner.py  type_def.py
AGENT/agent_module/apix_agent/routers/: git.py  infomation.py  settings.py  websocket.py
FILE/file_service/: .gitignore  global_config.py  main.py  pyproject.toml
FILE/file_service/core/commons/: decorator.py  logger.py  text_spliter.py  type_def.py
FILE/file_service/core/commons/yuki/: __init__.py
FILE/file_service/core/domain/: data_server_manager.py  document_convert.py  execute_layer.py  file_server.py  init_server.py  milvus_server.py  mysql_server.py
FILE/file_service/core/embedding_models/: __init__.py  embed_creator.py  embed_factory.py
FILE/file_service/routers/: file_record.py  information.py  rag_record.py  skill_record.py
MEMORY/memory_module/: README.md  global_config.py  main.py  pyproject.toml
MEMORY/memory_module/core/commons/: id_generator.py  type_def.py
MEMORY/memory_module/core/domain/: data_server_manager.py  execute_layer.py  init_server.py  mysql_server.py  redis_server.py
MEMORY/memory_module/core/domain/helper/: message_node_helper.py
MEMORY/memory_module/routers/: memory_record.py  user_record.py
README/: README_en.md  README_zh.md
TASK/task_flow_module/: config.yaml  main.py  pyproject.toml
TASK/task_flow_module/app/: global_config.py
TASK/task_flow_module/app/commons/: custom_errors.py  logger.py  yaml_reader.py
TASK/task_flow_module/app/core/: task_manager.py  translator.py
TASK/task_flow_module/app/routers/: task.py
(+128 files in other folders)
