[project]
name = "apix_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.2",
    "chardet>=6.0.0.post1",
    "charset-normalizer>=3.4.4",
    "crawl4ai>=0.8.6",
    "ddgs>=9.13.1",
    "docx>=0.2.4",
    "easyocr>=1.7.2",
    "fastapi>=0.121.0",
    "inflect>=7.5.0",
    "langchain>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=3.0.1",
    "langchain-mcp-adapters==0.2.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "lxml>=5.3,<6",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "readability-lxml>=0.8.4.1",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "tavily>=1.1.0",
    "unidiff>=0.7.5",
    "urllib3>=2.6.3,<3",
    "uvicorn>=0.38.0",
]
