[project]
name = "apix_service"
version = "0.1.0"
description = "Service for APIX platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "fastapi==0.119.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jsonpatch==1.33",
    "jsonpath-ng==1.7.0",
    "jsonpointer==3.0.0",
    "langchain-core==1.0.1",
    "langgraph==1.0.1",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.1",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.38",
    "orjson==3.11.4",
    "ormsgpack==1.11.0",
    "packaging==25.0",
    "ply==3.11",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pymongo==4.15.3",
    "pymysql==1.1.2",
    "pyodbc==5.3.0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
